--- a/sample2.html
+++ b/sample2.html
@@ -5,6 +5,7 @@
   <body>
     <h1>attribue of color</h1>
     <h2>heading 2 </h2>
+    <h3>head2</h3>
     <p>
       <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
     </p>
