--- a/sample2.html
+++ b/sample2.html
@@ -11,3 +11,4 @@
       <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
     </p>
   </body>
+</html>
